  - `getReducedData` 
  - `assignUnassigned`
	- `renameClusters` and `recolorClusters` to assign new names/colors to clusters within a particular clustering
  - `clusterMatrixNames` and `clusterMatrixColors` as wrappers to `convertClusterLegend` to return matrix like `clusterMatrix` only with the names or colors in place of the internal cluster ids.
* Arguments changed:
  - `sampleData` changed to `colData` to match `SummarizedExperiment` syntax. Similarly `alignSampleData` has changed to `alignColData`
  - `ignoreUnassignedVar` to `filterIgnoresUnassigned` for clarity.
* Removed restriction in `plotClustersWorkflow` that only `clusterType="clusterMany"` allowed.
* Added option `nColLegend` to `plotReducedDims`
* Allow `getClusterManyParams` to search old `clusterMany` runs as well.
* Added error catch if try to give argument `whichCluster` to `mergeCluster`.
* Added error catch if give param `whichClusters` to functions that only take `whichCluster` (singular) as an argument
* Added `table` method to `plotHeatmap`

Bugs:
* Add check for merge_nodeMerge table that `mergeClusterId` column can't be NA for entries where `isMerged=TRUE`
* Fix internal .makeIntegerClusters so that if given values `1:K` for input clustering will retain these same values (Issue #227)

Changes in version 2.1.3 ( Release date: 2018-05-24)
==============
Bugs:
* Fix bug in how `clusterMany` and `defaultNDims` dealt with filtering choices in `reduceMethod`. 
* Fixed bug in how `clusterMany` assigned label names 
* Fixed bug so that `clusterMany` labels are increased (iteration version added) if `clusterMany` is rerun. Also, user-defined labels for functions like `mergeClusters` are now updated with iteration value if they are duplicated.


Changes in version 2.1.2 ( Release date: 2018-05-17)
==============

Bugs:
* Fix so that estimates of the proportion non-null in `mergeClusters` are always positive.