@@ -1,6 +1,6 @@
 Package: clusterExperiment
 Title: Compare Clusterings for Single-Cell Sequencing 
-Version: 2.1.3-9003
+Version: 2.1.3-9004
 Description: Provides functionality for running and comparing many
     different clusterings of single-cell sequencing data or other large mRNA Expression data sets.
 Authors@R: c(person("Elizabeth", "Purdom", email = "epurdom@stat.berkeley.edu",
@@ -90,6 +90,7 @@ Collate:
     'plotFeatureBoxplot.R'
     'plotHeatmap.R'
     'plotReduceDim.R'
+    'plotTableClusters.R'
     'plottingHelpers.R'
     'rsec.R'
     'seqCluster.R'
