@@ -84,6 +84,7 @@ exportMethods(plotDendrogram)
 exportMethods(plotFeatureBoxplot)
 exportMethods(plotHeatmap)
 exportMethods(plotReducedDims)
+exportMethods(plotTableClusters)
 exportMethods(primaryCluster)
 exportMethods(primaryClusterIndex)
 exportMethods(primaryClusterLabel)
