@@ -7,7 +7,9 @@ setGeneric(name = "nClusters", function(x,...){ standardGeneric("nClusters")})
 setGeneric(name = "makeFilterStats", function(object,...){ standardGeneric("makeFilterStats")})
 setGeneric(name="makeReducedDims", function(object,...){ standardGeneric("makeReducedDims")})
 setGeneric(name="plotClusterLegend", function(object,...){standardGeneric("plotClusterLegend")})
-setGeneric( "tableClusters", function(x,whichClusters,...){ standardGeneric("tableClusters") })
+setGeneric( "tableClusters", function(object,whichClusters,...){ standardGeneric("tableClusters") })
+setGeneric( "plotTableClusters", function(object,...){ standardGeneric("plotTableClusters") })
+
 setGeneric(name = "nodeMergeInfo", def=function(x,...){ standardGeneric("nodeMergeInfo") })
 setGeneric(name = "assignUnassigned", def=function(object,...){ standardGeneric("assignUnassigned") })
 setGeneric(name = "getReducedData", def=function(object,...){ standardGeneric("getReducedData") })
