@@ -570,67 +570,3 @@ setReplaceMethod(
     
   }
 )
-
-
-#' @aliases tableClusters
-#' @rdname ClusterExperiment-methods
-setMethod( 
-  f = "tableClusters",
-  signature = signature(x = "ClusterExperiment",whichClusters="character"),
-  definition = function(x, whichClusters,...)
-  {
-    wh<-.TypeIntoIndices(x,whClusters=whichClusters)
-    if(length(wh)==0) stop("invalid choice of 'whichClusters'")
-    return(tableClusters(x,whichClusters=wh,...))
-    
-  })
-
-#' @rdname ClusterExperiment-methods
-#' @export
-setMethod( 
-  f = "tableClusters",
-  signature = signature(x = "ClusterExperiment",whichClusters="missing"),
-  definition = function(x, whichClusters,...)
-  {
-    tableClusters(x,whichClusters="primaryCluster")
-    
-  })
-
-#' @rdname ClusterExperiment-methods
-#' @param useNames for \code{tableClusters}, whether the output should be tabled
-#'   with names (\code{useNames=TRUE}) or ids (\code{useNames=FALSE})
-#' @export
-setMethod( 
-  f = "tableClusters",
-  signature = signature(x = "ClusterExperiment",whichClusters="numeric"),
-  definition = function(x, whichClusters, useNames=TRUE,...)
-  { 
-    if(useNames) numCluster<-clusterMatrixNames(x,whichClusters=whichClusters)
-    else numCluster<-clusterMatrix(x)[,whichClusters]
-    table(data.frame(numCluster))
-  })
-
-
-# # Need to implement: wrapper to get a nice summary of the parameters choosen, similar to that of paramMatrix of clusterMany (and compatible with it)
-# #' @rdname ClusterExperiment-class
-# setMethod(
-#   f= "paramValues",
-#   signature = "ClusterExperiment",
-#   definition=function(x,type){
-#     whCC<-which(clusterTypes(x)==type)
-#     if(length(wwCC)==0) stop("No clusterings of type equal to ",type,"are found")
-#     if(type=="clusterMany"){
-#       #recreate the paramMatrix return value
-#       paramMatrix<-do.call("rbind",lapply(wwCC,function(ii){
-#         data.frame(index=ii,clusteringInfo(x)[[ii]]["choicesParam"])
-#       }))
-#
-#     }
-#     else if(type=="clusterSingle"){
-#
-#     }
-#     else{
-#       return(clusteringInfo(x)[whCC])
-#     }
-#   }
-# )
